# remote-testbed

./: AdministratorManual.md  DeveloperManual.md  DisplayName.md  EnhancementIdeas.md  EnhancementProposals.md  LoggingEnhancementProposal.md  ProjectHome.md  REP001.md  REP101.md  REP102.md  REP103.md  ReleaseNotes.md  RoadMap.md  RoadMapArchive.md  SecurityConsiderations.md  SourceCode.md  SvnSynchronization.md  UdevEnhancementProposal.md  UserManual.md
branches/remote-1.x/remote-mci/doc/: Makefile.am
documentation/: .gitignore  (+1 more)
remote-mci/: .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.lib  NEWS  acinclude.m4  configure.in  remote.h
remote-mci/common/: format.h
remote-mci/contrib/cit/bootloaders/: micaz.init
remote-mci/contrib/diku/ftdi-sio-dig528/: ftdi_sio_dig528.h  ftdi_sio_dig528.patch
remote-mci/contrib/etc/: diku_mch.cfg  remote-mch.cfg  remote-mcs.cfg
remote-mci/contrib/etc/init.d/: diku_mch.thinstation  diku_mcs.fedora  diku_mcs.gentoo  remote-mch.fedora
remote-mci/contrib/lib/udev/: remote-device-add  remote-device-remove
remote-mci/contrib/scripts/: program-dig528-2.sh  program-mote.sh
remote-mci/diku_mch/: Configuration.cc  Configuration.h  DeviceManager.cc  DeviceManager.h  Makefile.am  Mote.cc  Mote.h  MoteHost.cc  MoteHost.h  SerialControl.cc  SerialControl.h
remote-mci/diku_mch/plugpiper/: .gitignore  Makefile.am
remote-mci/diku_mcs/: Configuration.cc  Configuration.h  Host.cc  Host.h  MoteAddresses.cc  MoteAddresses.h  moteserver.cc
remote-mci/doc/: .gitignore  Doxyfile  Makefile.am  remote-device-add.7  remote-device-name.7  remote-device-remove.7  remote-mch.1  remote-mch.1.txt  remote-mcs.1
remote-mci/doc/diku_mch/: description.txt
remote-mci/libutil/: File.cc  File.h  Log.h  Makefile.am
remote-mci/mch/: Mote.h  MoteHost.cc  MoteHost.h  SerialControl.h
remote-mci/mch/notify/: .gitignore
remote-mci/mcs/: Configuration.cc  FileDescriptor.cc  FileDescriptor.h  Host.cc  Host.h  HostListener.cc  HostListener.h  Makefile.am  Mote.cc  Mote.h  MoteAddresses.h  Session.cc  Session.h  SessionListener.cc  database.h  moteserver.cc
remote-mci/protocols/: BaseMsg.h  MMSException.cc  MMSException.h  Makefile.am  Message.cc  Message.h  MsgPayload.cc  MsgPayload.h  tcputil.cc  tcputil.h
remote-mci/protocols/client_server/: ClientMsg.cc  ClientMsg.h  MsgClientConfirm.h  MsgClientRequest.cc  MsgClientRequest.h  MsgMoteIdList.cc  MsgMoteIdList.h  MsgSession.cc  MsgSession.h  localconstants.h
remote-mci/protocols/diku_host_server/: MsgHostConfirm.cc  MsgHostRequest.cc  MsgHostRequest.h  MsgMoteAddresses.cc  MsgMoteAddresses.h  MsgMoteConnectionInfo.cc  MsgMoteConnectionInfo.h  MsgMoteConnectionInfoList.cc  MsgMoteConnectionInfoList.h  MsgPlugEvent.h
remote-mci/protocols/host_server/: HostMsg.cc  HostMsg.h  MsgHostConfirm.h  MsgHostRequest.cc  MsgHostRequest.h  MsgMoteAddresses.cc  MsgMoteAddresses.h  MsgPlugEvent.h
remote-mci/protocols/motecontrol/: MoteMsg.cc  MoteMsg.h  MsgConfirm.cc  MsgConfirm.h  MsgRequest.cc  MsgRequest.h  localconstants.h
remote-mci/src/: Makefile.am  remote.h
remote-mci/src/mch/: DeviceManager.cc  Mote.cc  Mote.h  MoteHost.cc  MoteHost.h  README  SerialControl.cc  SerialControl.h
remote-mci/src/mcs/: Host.h  Mote.cc  MoteAddresses.h  Session.cc  database.cc  database.h  moteserver.cc
remote-mci/src/protocols/: BaseMsg.h  MsgPayload.cc
remote-mci/src/protocols/client_server/: ClientMsg.cc  MsgClientConfirm.h  MsgMoteIdList.cc  MsgMoteIdList.h  localconstants.h
remote-mci/src/protocols/host_server/: HostMsg.h  MsgHostRequest.h  MsgMoteAddresses.cc  MsgMoteConnectionInfoList.h  MsgPlugEvent.cc
remote-mci/src/protocols/motecontrol/: MoteMsg.h  MsgRequest.cc  localconstants.h
remote-mci/src/util/: Config.cc  Config.h  File.h  error.h
trunk/remote-mci/: Makefile.am  Makefile.lib  README  TODO  acinclude.m4  configure.in  remote.h
trunk/remote-mci/common/: Makefile.am  format.h
trunk/remote-mci/contrib/etc/: diku_mch.cfg  remote-mcs.cfg
trunk/remote-mci/contrib/scripts/: control-mote.sh  program-dig528-2.sh  program-mote.sh
trunk/remote-mci/diku_mch/: .gitignore  Configuration.cc  Configuration.h  DeviceManager.cc  DeviceManager.h  Mote.cc  Mote.h  MoteHost.cc  MoteHost.h  SerialControl.cc  SerialControl.h
trunk/remote-mci/diku_mcs/: .gitignore  Configuration.h  Host.cc  Host.h  HostListener.cc  HostListener.h  Makefile.am  MoteAddresses.cc  MoteAddresses.h  moteserver.cc
trunk/remote-mci/doc/: Doxyfile  Makefile.am  asciidoc.conf  remote-device-add.7  remote-device-name.7  remote-mch.1.txt  remote-mcs.1  remote-mcs.1.txt
trunk/remote-mci/doc/diku_mch/: description.txt
trunk/remote-mci/doc/rfc/: 101-udev-device-management.txt  Makefile.am
trunk/remote-mci/libutil/: Config.cc  File.cc  File.h  Log.cc  Makefile.am
trunk/remote-mci/mch/: Makefile.am  Mote.cc  Mote.h  MoteHost.h  SerialControl.h
trunk/remote-mci/mcs/: FileDescriptor.cc  FileDescriptor.h  Host.cc  Host.h  HostListener.cc  Makefile.am  Mote.cc  Mote.h  MoteAddresses.h  MoteControlInfrastructure.h  Session.cc  Session.h  SessionListener.cc  SessionListener.h  constants.h  database.cc  database.h  moteserver.cc
trunk/remote-mci/protocols/: MMSException.cc  MMSException.h  Makefile.am  Message.cc  Message.h  MsgPayload.h  macros.h  tcputil.cc  tcputil.h  types.h
trunk/remote-mci/protocols/client_server/: ClientMsg.cc  ClientMsg.h  MsgClientConfirm.cc  MsgClientConfirm.h  MsgClientRequest.cc  MsgClientRequest.h  MsgMoteIdList.cc  MsgMoteIdList.h  MsgSession.cc  MsgSession.h
trunk/remote-mci/protocols/diku_host_server/: HostMsg.cc  HostMsg.h  MsgHostConfirm.h  MsgHostRequest.cc  MsgHostRequest.h  MsgMoteAddresses.cc  MsgMoteAddresses.h  MsgMoteConnectionInfo.cc  MsgMoteConnectionInfo.h  MsgMoteConnectionInfoList.h  MsgPlugEvent.cc  MsgPlugEvent.h
trunk/remote-mci/protocols/host_server/: HostMsg.cc  MsgHostConfirm.cc  MsgHostConfirm.h  MsgMoteAddresses.h  MsgMoteConnectionInfo.cc  MsgMoteConnectionInfo.h  MsgMoteConnectionInfoList.cc  MsgMoteConnectionInfoList.h  MsgPlugEvent.h
trunk/remote-mci/src/: remote.h
(+1024 files in other folders)
