noinst_LIBRARIES = libmcs.a

INCLUDES = -I/usr/include/mysql -I/usr/include/mysql++

libmcs_a_SOURCES = \
 FileDescriptor.cc \
 FileDescriptor.h \
 MCIAddress.h \
 Mote.cc \
 Mote.h \
 MoteControlInfrastructure.h \
 Session.cc \
 Session.h \
 SessionListener.cc \
 SessionListener.h \
 database.cc \
 database.h

include $(top_srcdir)/Makefile.lib
