noinst_LIBRARIES = libprotocols.a

libprotocols_a_SOURCES = \
 macros.h \
 Message.h \
 diku_host_server/MsgMoteConnectionInfoList.cc \
 diku_host_server/MsgHostConfirm.cc \
 diku_host_server/MsgPlugEvent.cc \
 diku_host_server/HostMsg.h \
 diku_host_server/MsgMoteConnectionInfoList.h \
 diku_host_server/MsgPlugEvent.h \
 diku_host_server/MsgMoteConnectionInfo.h \
 diku_host_server/MsgMoteAddresses.h \
 diku_host_server/MsgHostRequest.cc \
 diku_host_server/MsgHostConfirm.h \
 diku_host_server/MsgMoteConnectionInfo.cc \
 diku_host_server/HostMsg.cc \
 diku_host_server/MsgMoteAddresses.cc \
 diku_host_server/MsgHostRequest.h \
 client_server/MsgClientRequest.h \
 client_server/MsgClientConfirm.cc \
 client_server/MsgSession.h \
 client_server/ClientMsg.cc \
 client_server/localconstants.h \
 client_server/MsgSession.cc \
 client_server/MsgMoteIdList.cc \
 client_server/MsgClientRequest.cc \
 client_server/ClientMsg.h \
 client_server/MsgMoteIdList.h \
 client_server/MsgClientConfirm.h \
 tcputil.h \
 Message.cc \
 BaseMsg.h \
 motecontrol/MsgConfirm.h \
 motecontrol/MsgRequest.h \
 motecontrol/localconstants.h \
 motecontrol/MoteMsg.cc \
 motecontrol/MsgRequest.cc \
 motecontrol/MoteMsg.h \
 motecontrol/MsgConfirm.cc \
 MMSException.cc \
 MsgPayload.cc \
 MsgPayload.h \
 types.h \
 tcputil.cc \
 MMSException.h

include $(top_srcdir)/Makefile.lib
