noinst_LIBRARIES = libprotocols.a

libprotocols_a_SOURCES = \
 Message.h \
 client_server/MsgClientRequest.h \
 client_server/MsgClientConfirm.cc \
 client_server/MsgSession.h \
 client_server/ClientMsg.cc \
 client_server/localconstants.h \
 client_server/MsgSession.cc \
 client_server/MsgMoteIdList.cc \
 client_server/MsgClientRequest.cc \
 client_server/ClientMsg.h \
 client_server/MsgMoteIdList.h \
 client_server/MsgClientConfirm.h \
 host_server/MsgMoteConnectionInfoList.cc \
 host_server/MsgHostConfirm.cc \
 host_server/MsgPlugEvent.cc \
 host_server/HostMsg.h \
 host_server/MsgMoteConnectionInfoList.h \
 host_server/MsgPlugEvent.h \
 host_server/MsgMoteConnectionInfo.h \
 host_server/MsgMoteAddresses.h \
 host_server/MsgHostRequest.cc \
 host_server/MsgHostConfirm.h \
 host_server/MsgMoteConnectionInfo.cc \
 host_server/HostMsg.cc \
 host_server/MsgMoteAddresses.cc \
 host_server/MsgHostRequest.h \
 tcputil.h \
 Message.cc \
 BaseMsg.h \
 motecontrol/MsgConfirm.h \
 motecontrol/MsgRequest.h \
 motecontrol/localconstants.h \
 motecontrol/MoteMsg.cc \
 motecontrol/MsgRequest.cc \
 motecontrol/MoteMsg.h \
 motecontrol/MsgConfirm.cc \
 MMSException.cc \
 MsgPayload.cc \
 MsgPayload.h \
 types.h \
 tcputil.cc \
 MMSException.h

include $(top_srcdir)/Makefile.lib
